Update UISample.java